--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,9 +21,9 @@
 
     <title>2025 Bowman Draft Box Tracker | Live Price Tracking</title>
 
-    <!-- Favicon -->
+    <!-- Favicon - Professional chart icon -->
     <link rel="icon" type="image/svg+xml"
-        href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📈</text></svg>">
+        href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%236366f1' stroke-width='2'><path d='M3 3v18h18'/><path d='M18 9l-5 5-4-4-6 6'/></svg>">
 
     <!-- Critical CSS inline for fastest first paint -->
     <style>
@@ -279,8 +279,8 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-content">
-            <p>&copy; 2025 Bowman Draft Tracker. Data sourced from 130point.com</p>
-            <p class="footer-note">Updated hourly. Prices reflect per-box calculations from sold listings.</p>
+            <p>&copy; 2025 Bowman Draft Tracker. All rights reserved.</p>
+            <p class="footer-note">Updated hourly. Prices reflect per-box calculations from eBay sold listings.</p>
         </div>
     </footer>
 
