Fix: Update footer with accurate disclaimer
Removed false copyright claim. Added proper disclaimers:
- For informational purposes only
- Not affiliated with Topps or eBay

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -279,8 +279,9 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-content">
-            <p>&copy; 2025 Bowman Draft Tracker. All rights reserved.</p>
-            <p class="footer-note">Updated hourly. Prices reflect per-box calculations from eBay sold listings.</p>
+            <p>Bowman Draft Tracker — For informational purposes only.</p>
+            <p class="footer-note">Price data from eBay sold listings. Updated hourly. Not affiliated with Topps or
+                eBay.</p>
         </div>
     </footer>
 
