Add accuracy disclaimer to footer

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -280,8 +280,8 @@
     <footer class="footer">
         <div class="footer-content">
             <p>Bowman Draft Tracker — For informational purposes only.</p>
-            <p class="footer-note">Price data from eBay sold listings. Updated hourly. Not affiliated with Topps or
-                eBay.</p>
+            <p class="footer-note">Price data from eBay sold listings. Updated hourly. No guarantee of accuracy. Not
+                affiliated with Topps or eBay.</p>
         </div>
     </footer>
 
