FIX: Move loading overlay to TOP of body for instant render
Loading overlay is now the FIRST element after <body> tag.
This ensures the spinner is painted by the browser before any
other HTML content is parsed/rendered.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -102,6 +102,14 @@
 
 
 <body>
+    <!-- Loading Overlay - FIRST element in body for immediate render -->
+    <div class="loading-overlay" id="loadingOverlay">
+        <div style="text-align: center;">
+            <div class="loading-spinner"></div>
+            <p>Loading market data...</p>
+        </div>
+    </div>
+
     <!-- Animated Background -->
     <div class="bg-gradient"></div>
     <div class="bg-grid"></div>
@@ -309,16 +317,9 @@
     <!-- Toast Notifications -->
     <div class="toast-container" id="toastContainer"></div>
 
-    <!-- Loading Overlay - Visible by default, hidden by JS when ready -->
-    <div class="loading-overlay" id="loadingOverlay">
-        <div style="text-align: center;">
-            <div class="loading-spinner"></div>
-            <p>Loading market data...</p>
-        </div>
-    </div>
 
     <!-- Custom Scripts -->
-    <script defer src="js/app.js?v=8"></script>
+    <script defer src="js/app.js?v=9"></script>
 </body>
 
 </html>
