Add cache-busting versions to CSS files
Users were seeing old cached CSS with hidden loader.
Adding ?v=2 to force browsers to fetch new CSS.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -94,10 +94,10 @@
     <script defer
         src="https://unpkg.com/lightweight-charts@4.1.0/dist/lightweight-charts.standalone.production.js"></script>
 
-    <!-- Custom Styles - load async after critical CSS -->
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/components.css">
-    <link rel="stylesheet" href="css/utilities.css">
+    <!-- Custom Styles - with cache-busting version -->
+    <link rel="stylesheet" href="css/styles.css?v=2">
+    <link rel="stylesheet" href="css/components.css?v=2">
+    <link rel="stylesheet" href="css/utilities.css?v=2">
 </head>
 
 
