--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,6 @@
     <!-- Performance: DNS prefetch and preconnect -->
     <link rel="dns-prefetch" href="https://fonts.googleapis.com">
     <link rel="dns-prefetch" href="https://fonts.gstatic.com">
-    <link rel="dns-prefetch" href="https://unpkg.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -117,45 +116,13 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap"
         rel="stylesheet">
 
-    <!-- TradingView Lightweight Charts - with fallback CDNs -->
-    <script>
-        // Try loading from multiple CDNs for reliability
-        function loadChartLibrary() {
-            var sources = [
-                'https://unpkg.com/lightweight-charts@4.1.0/dist/lightweight-charts.standalone.production.js',
-                'https://cdn.jsdelivr.net/npm/lightweight-charts@4.1.0/dist/lightweight-charts.standalone.production.js',
-                'https://cdnjs.cloudflare.com/ajax/libs/lightweight-charts/4.1.0/lightweight-charts.standalone.production.js'
-            ];
-
-            function tryLoad(index) {
-                if (index >= sources.length) {
-                    console.error('Failed to load chart library from all CDNs');
-                    window.chartLibraryFailed = true;
-                    return;
-                }
-
-                var script = document.createElement('script');
-                script.src = sources[index];
-                script.onload = function () {
-                    console.log('Chart library loaded from:', sources[index]);
-                    window.chartLibraryLoaded = true;
-                };
-                script.onerror = function () {
-                    console.warn('Failed to load from:', sources[index]);
-                    tryLoad(index + 1);
-                };
-                document.head.appendChild(script);
-            }
-
-            tryLoad(0);
-        }
-        loadChartLibrary();
-    </script>
+    <!-- TradingView Lightweight Charts - SELF-HOSTED for reliability (no CDN dependency) -->
+    <script src="js/vendor/lightweight-charts.min.js"></script>
 
     <!-- Custom Styles - with cache-busting version -->
-    <link rel="stylesheet" href="css/styles.css?v=7">
-    <link rel="stylesheet" href="css/components.css?v=5">
-    <link rel="stylesheet" href="css/utilities.css?v=4">
+    <link rel="stylesheet" href="css/styles.css?v=8">
+    <link rel="stylesheet" href="css/components.css?v=6">
+    <link rel="stylesheet" href="css/utilities.css?v=5">
 </head>
 
 
@@ -380,7 +347,7 @@
 
 
     <!-- Custom Scripts -->
-    <script defer src="js/app.js?v=13"></script>
+    <script defer src="js/app.js?v=14"></script>
 </body>
 
 </html>
